--- a/CplusExample/Scenes/Category/Cell/CategoryCell.xib
+++ b/CplusExample/Scenes/Category/Cell/CategoryCell.xib
@@ -32,13 +32,13 @@
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VZ9-po-L9E">
                                 <rect key="frame" x="10" y="187.5" width="69" height="33.5"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="VXg-Ge-YIK">
-                                    <rect key="frame" x="0.0" y="0.0" width="69" height="33.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="69" height="34"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h9R-84-CgO">
                                             <rect key="frame" x="10" y="5" width="49" height="23.5"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -78,8 +78,8 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
-                <outlet property="genreImageView" destination="lzW-md-Wly" id="ZA4-To-d9p"/>
-                <outlet property="genreTitle" destination="h9R-84-CgO" id="lS1-t5-3zm"/>
+                <outlet property="categoryImageView" destination="lzW-md-Wly" id="ZA4-To-d9p"/>
+                <outlet property="categoryTitle" destination="h9R-84-CgO" id="lS1-t5-3zm"/>
             </connections>
             <point key="canvasLocation" x="140.57971014492756" y="175.78125"/>
         </tableViewCell>
